--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelWithFun"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Activites.DetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".Activites.SplashScreenActivity"
             android:exported="true">
@@ -21,9 +23,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity><activity
-        android:name=".Activites.IntroScreenActivity"
-        android:exported="true" />
+        </activity>
+        <activity
+            android:name=".Activites.IntroScreenActivity"
+            android:exported="true" />
         <activity
             android:name=".Activites.MainActivity"
             android:exported="true" />
