--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Gradle files
 .gradle/
 build/
+gradle/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -18,6 +19,7 @@ output.json
 # IntelliJ
 *.iml
 .idea/
+idea/
 misc.xml
 deploymentTargetDropDown.xml
 render.experimental.xml
